Address SonarCloud maintainability findings